src/objects/acfFAQ__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfAnswer__c</fullName>
        <description>Click Loans</description>
        <label>Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acfCMSPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>CMS Page</label>
        <referenceTo>acfCMS_Page__c</referenceTo>
        <relationshipName>acfFAQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfFAQType__c</fullName>
        <description>Click Loans</description>
        <label>FAQ Type</label>
        <picklist>
            <picklistValues>
                <fullName>Borrower Eligibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applying for a Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making Loan Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About Click Loans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfQuestion__c</fullName>
        <description>Click Loans</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <label>Click Loans FAQ</label>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>acfFAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACF FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>